# rust_sudoku

./: Cargo.toml  README.md  index.html  rust_sudoku-5195142524f36e4888a1bdf51ee536f61382acace8f3e98a1068c10461bc106d97c5e172d7c3f1955dac4271526492d3.js  rust_sudoku-5195142524f36e4888a1bdf51ee536f61382acace8f3e98a1068c10461bc106d97c5e172d7c3f1955dac4271526492d3_bg.wasm
assets/: sw.js
src/: app.rs  lib.rs  main.rs
src/sudoku/: board.rs  sudoku.rs
